# easyminer-backend

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  cleverminer_demo.py  compose.yml  cursor.xml  docker-compose.yml  justfile  pyarc_mining_demo.py  pyproject.toml  readme.md  verify_mining_pipelines.py
.github/workflows/: docker.yml  helm.yml  test.yml
charts/easyminer/: Chart.yaml  values.yaml
charts/easyminer-backend/: Chart.yaml  readme.md  values.yaml
charts/easyminer-backend/templates/: api-ingress.yaml  redis-deployment.yaml  secret.yaml
charts/easyminer/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  api-hpa.yaml  api-service.yaml  configmap.yaml  redis-pvc.yaml  redis-service.yaml  serviceaccount.yaml  worker-deployment.yaml  worker-hpa.yaml
easyminer/: app.py  center_client.py  config.py  database.py  decompress.py  dependencies.py  example.py  migrations.py  parser.py  redis_client.py  tasks.py  worker.py  xxxtasks.py
easyminer/alembic/: env.py  script.py.mako
easyminer/alembic/versions/: 001_init.py  0341d5b5dfe3_init.py  0b1f50393ab6_init.py  0b97e16f8684_split_field.py  0c02a101a25f_initial.py  125057df0276_task_status_enum.py  14b401bfe2db_add_data_source_and_field_models.py  (+38 more)
easyminer/api/: data.py  miner.py  preprocessing.py  router.py  security.py  task.py  users.py
easyminer/crud/: data_source.py  field.py  task.py  upload.py  user.py
easyminer/data/: api.py
easyminer/models/: __init__.py  data.py  dataset.py  dynamic_tables.py  preprocessing.py  task.py  upload.py  user.py
easyminer/preprocessing/: smoothing.py
easyminer/processing/: __init__.py  csv_processor.py  csv_utils.py  data_retrieval.py
easyminer/schemas/: __init__.py  center.py  data.py  dataset.py  error.py  field_values.py  miner.py  preprocessing.py  task.py  user.py
easyminer/storage/: __init__.py  disk.py  s3.py  storage.py
easyminer/tasks/: __init__.py  aggregate_field_values.py  calculate_field_numeric_detail.py  cba_utils.py  create_attribute.py  create_dataset.py  finalize_data_source.py  mine.py  populate_field_values.py  process_chunk.py  update_field_statistics.py
easyminer/validators/: __init__.py  miner.py
src/: generate_schema.py
src/easyminer/: app.py  model.py  settings.py
tests/: conftest.py  test_authentication.py  test_cba_integration.py  test_create_attribute_task.py  test_data_integration.py  test_data_retrieval.py  test_data_source.py  test_data_source_crud.py  test_datasource_crud.py  test_dba_resolver.py  test_field_crud.py  test_field_values_endpoint.py  test_get_instances.py  test_mine_db_url.py  test_miner_validator_extensions.py  test_parsers_pmml_miner.py  test_parsers_pmml_preprocessing.py  test_preprocessing_new.py  test_processing.py  test_smoothing.py  test_storage.py  test_task_crud.py  test_task_result_schemas.py  test_task_status.py  test_upload.py
tests/crud/: test_data_source.py  test_field.py  test_task.py  test_upload.py  test_user.py
tests/integration/: test_data_retrieval_api.py  test_data_source_api.py  test_field_api.py  test_preview_api.py  test_task_api.py  test_task_status_api.py  test_upload_api.py
tools/: benchmark_mining.py  fake_server.py  generate_test_dataset.py  integration_test.sh  miner_parser.py  pyarc_mining_demo.py  test_fourfold_calculation.py  upload_csv_chunked.py  verify_fourfold_with_lift.py
(+13 files in other folders)
