[project]
name = "easyminer-backend"
version = "0.1.0"
description = "Easyminer backend"
authors = [{ name = "Radim Sückr", email = "sucr02@vse.cz" }]
dependencies = [
	"aiomysql>=0.2.0",
	"alembic>=1.13.2",
	"celery[redis,tblib]>=5.4.0",
	"cryptography>=43.0.0",
	"defusedxml>=0.7.1",
	"fastapi[standard]>=0.111.1",
	"httpx>=0.28.1",
	"numpy>=2.2.3",
	"pydantic-settings>=2.4.0",
	"pyhumps>=3.8.0",
	"sqlalchemy[asyncio]>=2.0.31",
	"uvicorn[standard]>=0.30.3",
]
readme = "readme.md"
requires-python = ">= 3.13"

[dependency-groups]
dev = [
	"aiosqlite>=0.20.0",
	"black>=24.4.2",
	"celery-types>=0.23.0",
	"flake8>=7.1.0",
	"httpx>=0.27.0",
	"mypy>=1.11.0",
	"pytest>=8.3.1",
	"pytest-asyncio>=0.25.3",
	"pytest-cov>=6.0.0",
	"ruff>=0.9.10",
]

[tool.pyright]
extraPaths = ["./.venv/lib/python3.13/site-packages/"]
reportAny = "none"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "FAST", "I", "INP", "UP"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
